[project]
name = "aloe"
version = "0.1.0"
description = "Howtos & Python Tools for Kikuchi Diffraction"
authors = [{name = "Aimo Winkelmann", email = "aimo.winkelmann@gmail.com"}]
readme = "README.rst"
license = {text = "BSD-2-Clause"}
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.3",
    "h5py>=3.0",
    "scikit-image>=0.18",
    "opencv-python>=4.5",
    "pillow>=8.0",
    "pandas>=1.3",
    "tables>=3.6",
    "tqdm>=4.60",
    "pyyaml>=5.4",
    "FreeSimpleGUI>=5.0",
]

[project.optional-dependencies]
scientific = [
    "spglib>=1.16",
    "pymatgen>=2022.0",
]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "sphinx>=4.0",
    "nbsphinx>=0.8",
    "numpydoc>=1.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aloe = ["data/*", "data/**/*"]